<resources>
    <string name="app_name">IICTbeta2</string>
    <string name="go">GO!</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="log_in">LOG IN</string>
    <string name="sign_up">SIGN UP</string>
    <string name="todo">TODO</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_signed_up_log_in_to_your_account">Already signed up? Log in to your account.</string>
    <string name="name">Name</string>
    <string name="logged_in_home">Logged in home</string>
    <string name="forgotpass_message">Please enter the email your account is registered with. A password reset link will be sent to that email address.</string>
    <string name="change_display_name">CHANGE DISPLAY NAME</string>
    <string name="loading">Loading...</string>
    <string name="resend_verification_link">Resend Verification Link</string>
    <string name="settings">Settings</string>
    <string name="log_out">Log Out</string>
    <string name="recharge">Recharge</string>
    <string name="loading_uid">Loading UID...</string>
    <string name="loading_balance">Loading Balance...</string>
    <string name="nameo">Name</string>
    <string name="a">a</string>
    <string name="chicken_curry_n_40_bdt">Chicken\n(40 BDT)</string>
    <string name="pudding_n_20_bdt">Pudding\n(20 BDT)</string>
    <string name="rice_20_bdt">Rice\n(20 BDT)</string>
    <string name="egg_curry_20_bdt">Egg Curry\n(20 BDT)</string>
    <string name="lentil_20_bdt">Lentil\n(20 BDT)</string>
    <string name="khichuri_25_bdt">Khichuri\n(25 BDT)</string>
    <string name="minus"> - </string>
    <string name="plus">+</string>
    <string name="proceed">Proceed</string>
    <string name="total">Total :</string>
    <string name="zero">0</string>
    <string name="table_no">Table No :</string>
    <string name="bdt">BDT</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="five">5</string>
    <string name="four">4</string>
    <string name="six">6</string>
    <string name="order">ORDER</string>
    <string name="rice">Rice</string>
    <string name="chicken">Chicken</string>
    <string name="egg_curry">Egg Curry</string>
    <string name="khichuri">Khichuri</string>
    <string name="pudding">Pudding</string>
    <string name="lentil">Lentil</string>
    <string name="current_balance">Current Balance</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_main3">Main3Activity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
</resources>
