<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AccActivity.SignupActivity"
    android:orientation="horizontal">

    <include layout="@layout/toolbar" android:id="@+id/signup_toolbar" />

    <ScrollView android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/editTextName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="100dp"
            android:layout_marginEnd="30dp"
            android:layout_marginRight="30dp"
            app:errorEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                android:inputType="textPersonName" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/editTextEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="176dp"
            android:layout_marginEnd="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="30dp"
            app:errorEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="textEmailAddress" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/editTextPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="252dp"
            android:layout_marginEnd="30dp"
            android:layout_marginRight="30dp"
            app:passwordToggleEnabled="true"
            app:errorEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/editTextConfirmPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="331dp"
            android:layout_marginEnd="30dp"
            android:layout_marginRight="30dp"
            app:errorEnabled="true"
            app:passwordToggleEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/confirm_password"
                android:inputType="textPassword" />
        </android.support.design.widget.TextInputLayout>

        <!--<EditText
            android:id="@+id/editTextEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="94dp"
            android:layout_marginTop="120dp"
            android:layout_marginEnd="30dp"
            android:layout_marginRight="104dp"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />-->
        <!--
            <EditText
                android:id="@+id/editTextPass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginStart="30dp"
                android:layout_marginLeft="94dp"
                android:layout_marginTop="175dp"
                android:layout_marginEnd="30dp"
                android:layout_marginRight="104dp"
                android:ems="10"
                android:hint="@string/password_at_least_6_character_long"
                android:inputType="textPassword" />-->

        <!--<EditText
            android:id="@+id/editTextConfirmPass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="94dp"
            android:layout_marginTop="230dp"
            android:layout_marginEnd="30dp"
            android:layout_marginRight="104dp"
            android:ems="10"
            android:hint="@string/confirm_password"
            android:inputType="textPassword" />-->

        <Button
            android:id="@+id/go"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/editTextConfirmPass"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginStart="134dp"
            android:layout_marginLeft="159dp"
            android:layout_marginTop="48dp"
            android:layout_marginEnd="134dp"
            android:layout_marginRight="164dp"
            android:background="#C50C02"
            android:text="@string/go"
            android:textColor="#FFFFFF" />

        <Button
            android:id="@+id/login"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="514dp"
            android:layout_marginBottom="40dp"
            android:background="@null"
            android:text="@string/already_signed_up_log_in_to_your_account"
            android:textAllCaps="false"
            android:textColor="#C50C02" />

    </RelativeLayout>

</ScrollView>

</RelativeLayout>