<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AccActivity.LoginActivity">

    <include layout = "@layout/toolbar" android:id="@+id/login_toolbar" />

    <ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent">

        <RelativeLayout
        android:id="@+id/relative"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/editTextEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="120dp"
            android:layout_marginEnd="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="30dp"
            app:errorEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="textEmailAddress" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/editTextPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="196dp"
            android:layout_marginEnd="30dp"
            android:layout_marginRight="30dp"
            app:passwordToggleEnabled="true"
            app:errorEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword" />
        </android.support.design.widget.TextInputLayout>

        <!--<EditText
            android:id="@+id/editTextEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="94dp"
            android:layout_marginTop="120dp"
            android:layout_marginEnd="30dp"
            android:layout_marginRight="104dp"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:hint="@string/email"
            android:autofillHints="" tools:targetApi="o" />-->

        <!--<EditText
            android:id="@+id/editTextPass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="94dp"
            android:layout_marginTop="175dp"
            android:layout_marginEnd="30dp"
            android:layout_marginRight="104dp"
            android:ems="10"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:importantForAutofill="no" tools:targetApi="o"/>-->

        <Button
            android:id="@+id/go"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginStart="134dp"
            android:layout_marginLeft="135dp"
            android:layout_marginTop="290dp"
            android:layout_marginEnd="134dp"
            android:layout_marginRight="125dp"
            android:background="#C50C02"
            android:textColor="#FFFFFF"
            android:text="@string/go" />

        <Button
            android:id="@+id/forgot"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="350dp"
            android:layout_marginBottom="40dp"
            android:background="@null"
            android:textColor="#C50C02"
            android:textAllCaps="false"
            android:text="@string/forgot_password" />

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>